# ChangeLog for dev-java/jsch
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.56 2007/11/17 00:07:39 wltjr Exp $

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org> jsch-0.1.34.ebuild:
  amd64 stable, bug #198880.

  13 Nov 2007; Markus Rothe <corsair@gentoo.org> jsch-0.1.34.ebuild:
  Stable on ppc64; bug #198880

  13 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org> jsch-0.1.34.ebuild:
  Stable on ppc, see bug #198880.

  12 Nov 2007; Christian Faulhammer <opfer@gentoo.org> jsch-0.1.34.ebuild:
  stable x86, bug 198880

*jsch-0.1.36 (12 Nov 2007)

  12 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> +jsch-0.1.36.ebuild:
  Version bump.

  30 Oct 2007; Petteri Räty <betelgeuse@gentoo.org> -jsch-0.1.30.ebuild,
  -jsch-0.1.32.ebuild:
  Remove old versions.

*jsch-0.1.34 (01 Sep 2007)

  01 Sep 2007; Petteri Räty <betelgeuse@gentoo.org> +jsch-0.1.34.ebuild:
  Version bump.

  17 Jun 2007; Christoph Mende <angelos@gentoo.org> jsch-0.1.33.ebuild:
  Stable on amd64 wrt bug 181721

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> jsch-0.1.33.ebuild:
  stable x86, bug 181721

  14 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> jsch-0.1.33.ebuild:
  ppc stable, bug #181721

  13 Jun 2007; Markus Rothe <corsair@gentoo.org> jsch-0.1.33.ebuild:
  Stable on ppc64; bug #181721

  26 May 2007; Petteri Räty <betelgeuse@gentoo.org> -jsch-0.1.18.ebuild:
  Remove generation 1 ebuild.

*jsch-0.1.33 (12 May 2007)

  12 May 2007; Alistair John Bush <ali_bush@gentoo.org> +jsch-0.1.33.ebuild:
  Version bump

*jsch-0.1.32 (30 Apr 2007)

  30 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> +jsch-0.1.32.ebuild:
  Version bump.

  11 Mar 2007; Joshua Nichols <nichoj@gentoo.org> jsch-0.1.30.ebuild:
  Stable on amd64, see bug #168795.

  06 Mar 2007; Markus Rothe <corsair@gentoo.org> jsch-0.1.30.ebuild:
  Stable on ppc64; bug #168795

  02 Mar 2007; nixnut <nixnut@gentoo.org> jsch-0.1.30.ebuild: