@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/jsch
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.56 2007/11/17 00:07:39 wltjr Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jsch/ChangeLog,v 1.58 2007/11/26 20:17:29 betelgeuse Exp $
+
+  26 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> jsch-0.1.34.ebuild:
+  Add the ANT_TASKS fix to the stable ebuild too.
+
+  26 Nov 2007; Petteri Räty <betelgeuse@gentoo.org> jsch-0.1.36.ebuild:
+  Add ANT_TASKS="none" to fix bug #200309.
 
   17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org> jsch-0.1.34.ebuild:
   amd64 stable, bug #198880.
